# heart-disease-prediction

./: Data Cleaning and EDA.ipynb  Model_Building.ipynb  Model_Building_v2.ipynb  README.md  app.py  app1.py  app2.py  hd.wsgi  meds_cleaned_v1.csv  meds_model.pkl  meds_model_v2.pkl  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Data Cleaning and EDA-checkpoint.ipynb  Model_Building-checkpoint.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
templates/: index.html  result.html
