[tool.poetry]
name = "heart-disease-prediction"
version = "0.1.0"
description = ""
authors = ["rudrat04 <triveditrudra4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pycaret = ">=3.3.2,<4.0.0"
pandas = "<2.2.0"
numpy = "^1.26.4"
streamlit = "^1.35.0"
matplotlib = "<3.8.0"
plotly = "^5.22.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
